💅Add the close button to the rating
#370

--- a/libs/client/schedule/feature/src/lib/rating/rating.component.html
+++ b/libs/client/schedule/feature/src/lib/rating/rating.component.html
@@ -1,8 +1,10 @@
  <div class="">
+  <div class="right-align">
+    <mat-icon (click)="onNoClick()"> close</mat-icon>
+  </div>
   <div class="py-3 sm:max-w-xl sm:mx-auto">
     <div class="min-w-1xl flex flex-col rounded-xl">
       <div class="w-full flex flex-col items-center">
-
         <div class="flex flex-col items-center py-6 space-y-3">
           <span class="text-lg text-gray-800 text-center">How would you rate {{user.userName}} {{user.userSurname}}?</span>
         </div>
