--- a/libs/client/schedule/feature/src/lib/rating/rating.component.html
+++ b/libs/client/schedule/feature/src/lib/rating/rating.component.html
@@ -30,7 +30,7 @@
 
          </div>
         <div class="w-3/4 flex flex-col">
-          <button class="py-3 my-8 text-lg bg-black rounded-xl text-white"  (click)="add()">Rate now</button>
+          <button mat-raised-button color="primary" class="py-3 my-8 text-lg bg-black rounded-xl text-white"  (click)="add()">Rate now</button>
         </div>
       </div>
     </div>
