fixed logo padding

--- a/libs/client/signup/feature/src/lib/signup/signup.component.html
+++ b/libs/client/signup/feature/src/lib/signup/signup.component.html
@@ -9,13 +9,19 @@
             <div class="flex row">
 
                 <!-- left image -->
-                <div id="visual" >
+                <div id="visual">
                     <!-- <mat-card-content >
                         hi
                     </mat-card-content> -->
-                    <!-- <div id="imagecard"> -->
+                    
+                    <div id="imagecard">
+                        
                         <training-buddy-logo id="logo" dark="true"></training-buddy-logo>
-                    <!-- </div> -->
+                        <div id="contentcard">
+
+                        </div>
+
+                    </div>
                     <!-- <img id="imagecard" [src]="img"> -->
                 </div>
 
