--- a/libs/client/signup/feature/src/lib/signup/signup.component.scss
+++ b/libs/client/signup/feature/src/lib/signup/signup.component.scss
@@ -46,19 +46,13 @@ mat-card {
 }
 
 #imagecard {
-    height: 100% !important;
-    width: 100% !important;
-
-    object-fit: cover;
+    height: 100%;
+    width: 100%;
+    // background-color: grey;
     border-radius: 10px 0px 0px 10px;
-    background-color: white;
 }
 
-// #logo > div > svg {
-//     margin: 0px !important;
-// }
-
-@media (max-width: 980px) {
+@media (max-width: 1150px) {
 
     mat-card {
         box-shadow: none !important;
@@ -71,8 +65,20 @@ mat-card {
 
 }
 
-#logo > div {
-    width: fit-content !important;
+#logo {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    margin: auto !important;
+    padding-top: 15% !important;
+}
+
+#contentcard {
+    width: 600px;
+}
+
+#logo {
+    width: 600px !important;
 }
 
 #form {
@@ -82,9 +88,11 @@ mat-card {
 }
 
 #visual {
-    max-width: 500px;
-    width: 80vw !important;
+    // max-width: 600px;
+    // width: 500px;
+    // width: 80vw !important;
     background-color: white;
+    border-radius: 10px 0px 0px 10px;
 }
 
 .text-center {
