--- a/libs/client/schedule/feature/src/lib/workout/workout.component.html
+++ b/libs/client/schedule/feature/src/lib/workout/workout.component.html
@@ -64,28 +64,38 @@
   <div class=" bg-slate-600 m-4 sm:max-w-xl p-4 md:max-w-full md:px-24 lg:max-w-screen-xl lg:px-8 rounded-xl shadow-md ">
     <div class="max-w-xl mb-10 md:mx-auto text-center lg:max-w-2xl md:mb-12 items-center">
       <p class=" mt-2 pt-4 text-3xl font-extrabold tracking-tight text-gray-900 dark:divide-undefined dark:text-gray-900 ">Participants</p>
-      <ng-container *ngIf="organiser" >
+      <ng-container *ngIf="organiser && !isPastWorkout">
         <button mat-raised-button color="primary" class="text-white text-sm rounded-lg m-4"(click)="openDialog()">
           <mat-icon>add</mat-icon>
         </button>
       </ng-container>
-      <p class="md:text-lg mt-10">These are all the participants of your workout please rate their kindness.</p>
+      <p class="md:text-lg mt-10" *ngIf="isPastWorkout">These were all the participants of your workout please rate their ability</p>
+      <p class="md:text-lg mt-10" *ngIf="!isPastWorkout">These are all the buddies coming to your workout.</p>
     </div>
     <div class="pb-4 grid gap-10 row-gap-8 mx-auto sm:row-gap-10 lg:max-w-screen-lg sm:grid-cols-1 lg:grid-cols-2">
-      <div *ngFor="let participant of participants" class="flex rounded-xl shadow-md p-4 min-w-full bg-white">
-        <img alt="No alt" src="{{participant.image}}" (click)="viewProfile(participant.id)"  class="object-cover w-20 h-20 mr-4 rounded-full shadow bg-blue-100" />
-        <div class="flex flex-col justify-center">
-          <p class="text-lg font-bold text-slate-900 dark:text-slate-900">{{participant.userName}} {{participant.userSurname}}</p>
 
-          <ng-container *ngIf="!isCurrentUser(participant)">
-            <button mat-raised-button color="primary" class="w-10" (click)="rateUser(participant)">Rate</button>
-          </ng-container>
-          <ng-container *ngIf="isCurrentUser(participant)">
-            <p class="text-sm text-gray-600 dark:text-gray-600">You can't rate yourself</p>
-          </ng-container>
-
+      <ng-container *ngIf="isPastWorkout">
+        <div *ngFor="let participant of participants" class="flex rounded-xl shadow-md p-4 min-w-full bg-white">
+          <img alt="No alt" src="{{participant.image}}" (click)="viewProfile(participant.id)"  class="object-cover w-20 h-20 mr-4 rounded-full shadow bg-blue-100" />
+          <div class="flex flex-col justify-center">
+            <p class="text-lg font-bold text-slate-900 dark:text-slate-900">{{participant.userName}} {{participant.userSurname}}</p>
+              <ng-container *ngIf="!isCurrentUser(participant)">
+                <button mat-raised-button color="primary" class="w-10" (click)="rateUser(participant)">Rate</button>
+              </ng-container>
+              <ng-container *ngIf="isCurrentUser(participant)">
+                <p class="text-sm text-gray-600 dark:text-gray-600">You can't rate yourself</p>
+              </ng-container>
+          </div>
         </div>
-      </div>
+      </ng-container>
+      <ng-container *ngIf="!isPastWorkout">
+        <div *ngFor="let participant of participants" (click)="viewProfile(participant.id)" class="flex rounded-xl shadow-md p-4 min-w-full bg-white">
+          <img alt="No alt" src="{{participant.image}}" class="object-cover w-20 h-20 mr-4 rounded-full shadow bg-blue-100" />
+          <div class="flex flex-col justify-center">
+            <p class="text-lg font-bold text-slate-900 dark:text-slate-900">{{participant.userName}} {{participant.userSurname}}</p>
+          </div>
+        </div>
+      </ng-container>
     </div>
   </div>
 
