--- a/libs/client/strava/feature/src/lib/stravalink/stravalink.component.scss
+++ b/libs/client/strava/feature/src/lib/stravalink/stravalink.component.scss
@@ -29,6 +29,7 @@ mat-grid-list {
 mat-card {
     width: 90vw;
     max-width: 400px;
+    margin-top: 30%;
 }
 
 mat-spinner {
@@ -72,6 +73,14 @@ mat-hint {
 
 #center {
     text-align: center;
+}
+
+#logo {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
+    margin-top: 2%;
 }
 
 #stravaLogo {
