--- a/libs/client/landingpage/feature/src/lib/landing/landing.component.scss
+++ b/libs/client/landingpage/feature/src/lib/landing/landing.component.scss
@@ -1,1 +1,145 @@
+hr.line{
 
+    margin-top: 40px;
+    width: 25%;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: black;
+    height: 3px;
+}
+
+#footer{
+    margin-top: 50px;
+}
+
+#epiuseLogo{
+    margin-top: 13px;
+}
+
+.footerCard{
+    max-width: 250px;
+    margin: 20px;
+    transition: transform .1s;
+    background-color: black;
+}
+
+.footerCard > mat-card-title {
+    color: white;
+    font-size: large;
+}
+
+.card > mat-card-content{
+    display: flex;
+    justify-content: center;
+    padding-left: 12px;
+}
+
+.card {
+    max-width: 250px;
+    margin: 20px;
+}
+
+mat-card-title{
+    text-align: center;
+}
+
+#landingImage{
+    background-image:
+    linear-gradient(to right, rgba(250, 252, 253, 0.877), rgba(0, 0, 0, 0.808)),
+    url('https://images.unsplash.com/photo-1539966903171-89770f33f468?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80');
+    width: 100%;
+    height: 50vh;
+    background-size: cover;
+}
+
+#landingTitle{
+
+    font-family: 'Metropolis', sans-serif;
+    font-size: 50px;
+    font-weight: bold;
+    padding-top: 100px;
+    padding-bottom: 20px;
+}
+
+#aboutTitle{
+    font-family: 'Metropolis', sans-serif;
+    font-size: 25px;
+    font-weight: bold;
+    padding-top: 40px;
+    padding-bottom: 30px;
+}
+
+
+#landingDescription{
+    font-family: 'Metropolis', sans-serif;
+    font-size: medium;
+    width: 25vw;
+    text-align: center;
+    // margin-left: 25%;
+}
+
+#space{
+    padding: 10px;
+}
+#Buttons{
+    padding-top: 20px;
+    align-items: center;
+}
+
+#footer{
+    background-color: black;
+    color: white;
+    padding: 50px;
+    text-align: center;
+    font-family: 'Metropolis', sans-serif;
+    font-size: 15px;
+    font-weight: bold;
+}
+
+.Logos{
+    width: 100px;
+    height: auto;
+    margin-left: 30px;
+    
+}
+
+.mat-raised-button {
+    width: 150px !important;
+    background-color: rgb(2, 184, 187);
+    transition: transform .1s;
+}
+
+.mat-raised-button:hover{
+    transform: scale(1.1);
+}
+
+
+.flex{
+    display: flex;
+}
+
+.column{
+    flex-direction: column;
+}
+
+.row{
+    flex-direction: row;
+}
+
+.wrap{
+    flex-wrap: wrap;
+}
+
+
+.center{
+    justify-content: center;
+}
+
+.align-x{
+    align-items: center;
+}
+
+.spaceEvenly{
+    justify-content: space-evenly;
+
+}
