banner fix on landing page

--- a/libs/client/landingpage/feature/src/lib/landing/landing.component.html
+++ b/libs/client/landingpage/feature/src/lib/landing/landing.component.html
@@ -1,15 +1,13 @@
-<div id="landingImage">
-
-</div>
-
-<!-- //About and strava div -->
-<div>
-
+<div id="landingImage" class="bannercontent">
   
+  <div>
+    <training-buddy-logo id="logo" height="100"></training-buddy-logo>
+  </div>
+  <div class="white bannerabout">
+    Training Buddy provides a secure and user-friendly way for exercise enthusiasts of all levels to enhance their fitness journeys by connecting with like-minded users and scheduling workouts.
+  </div>
 
 </div>
-
-
 
 <div>
     <hr class="line">
