--- a/libs/client/landingpage/feature/src/lib/landing/landing.component.scss
+++ b/libs/client/landingpage/feature/src/lib/landing/landing.component.scss
@@ -1,5 +1,4 @@
 hr.line{
-
     margin-top: 40px;
     width: 25%;
     margin-left: auto;
@@ -45,7 +44,7 @@ mat-card-title{
 
 #landingImage{
     background-image:
-    linear-gradient(to right, rgba(250, 252, 253, 0.877), rgba(0, 0, 0, 0.808)),
+    linear-gradient(to right, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.8) 50%, rgba(0, 0, 0, 0.377)),
     url('https://images.unsplash.com/photo-1539966903171-89770f33f468?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80');
     width: 100%;
     height: 50vh;
@@ -141,5 +140,59 @@ mat-card-title{
 
 .spaceEvenly{
     justify-content: space-evenly;
+
+}
+
+.white {
+    color: white
+}
+
+.bannercontent {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+
+    //vert. align
+    justify-content: space-evenly;
+
+    height: 100%;
+
+    //hor. align
+    align-items: center;
+}
+
+.bannerabout {
+    width: 40%;
+    max-width: 600px;
+    text-align: center;
+    font-size: 20px;
+    line-height: 26px;
+}
+
+#logo {
+    width: 300px !important;
+}
+
+@media (max-width: 900px) {
+
+    .bannerabout {
+        width: 60%;
+    }
+
+}
+
+@media (max-width: 600px) {
+
+    .bannerabout {
+        width: 70%;
+    }
+
+}
+
+@media (max-width: 450px) {
+
+    .bannerabout {
+        width: 80%;
+    }
 
 }
