--- a/libs/client/landingpage/feature/src/lib/landing/landing.component.html
+++ b/libs/client/landingpage/feature/src/lib/landing/landing.component.html
@@ -1,19 +1,25 @@
 <div id="landingImage" class="bannercontent">
   
-  <div>
-    <training-buddy-logo id="logo" height="100"></training-buddy-logo>
+  <div id="logoparent">
+    <training-buddy-logo id="logo-lg" height="100"></training-buddy-logo>
+    <training-buddy-logo id="logo-sm" height="70"></training-buddy-logo>
   </div>
   <div class="white bannerabout">
-    Training Buddy provides a secure and user-friendly way for exercise enthusiasts of all levels to enhance their fitness journeys by connecting with like-minded users and scheduling workouts.
+    Training Buddy provides a secure and user-friendly way for exercise enthusiasts to connect and train with new people. Training Buddies' recomendation engine provides accurate and helpful suggestions of new training buddies.
   </div>
 
 </div>
 
-<div>
-    <hr class="line">
+
+<div id="systeminfo">
+  
 </div>
 
-<div>
+<!-- <div>
+    <hr class="line">
+</div> -->
+
+<!-- <div>
     <div id="aboutTitle" class="flex center align-x">
         Training Buddy Supports   
     </div>
@@ -22,10 +28,10 @@
 <div class="flex center wrap">
 
     <mat-card class="card">
-        <mat-card-title>Running</mat-card-title>
-        <mat-card-content>
-          <img alt="running icon" src="https://img.icons8.com/ios/50/000000/running.png" class="my-auto object-scale-down w-20 h-20 mr-4 rounded-full shadow bg-white border-4 border-sky-200 border-x-sky-500" />
-        </mat-card-content>
+      <mat-card-content>
+        <img alt="running icon" src="https://img.icons8.com/ios/50/000000/running.png" class="my-auto object-scale-down w-20 h-20 mr-4 rounded-full shadow bg-white border-4 border-sky-200 border-x-sky-500" />
+      </mat-card-content>
+      <mat-card-title>Running</mat-card-title>
     </mat-card>
 
     <mat-card class="card">
@@ -49,7 +55,7 @@
         </mat-card-content>
     </mat-card>
 
-</div>
+</div> -->
 
 
 <div id="footer" class="flex center wrap spaceEvenly"> 
