--- a/libs/client/landingpage/feature/src/lib/landing/landing.component.scss
+++ b/libs/client/landingpage/feature/src/lib/landing/landing.component.scss
@@ -47,7 +47,7 @@ mat-card-title{
     linear-gradient(to right, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.8) 50%, rgba(0, 0, 0, 0.377)),
     url('https://images.unsplash.com/photo-1539966903171-89770f33f468?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80');
     width: 100%;
-    height: 50vh;
+    height: 45vh;
     background-size: cover;
 }
 
@@ -165,16 +165,19 @@ mat-card-title{
     width: 40%;
     max-width: 600px;
     text-align: center;
-    font-size: 20px;
+    font-size: 18px;
     line-height: 26px;
 }
 
-#logo {
-    width: 300px !important;
+#logo-sm {
+    display: none;
+}
+
+#systeminfo {
+    height: 50vh;
 }
 
 @media (max-width: 900px) {
-
     .bannerabout {
         width: 60%;
     }
@@ -189,10 +192,23 @@ mat-card-title{
 
 }
 
-@media (max-width: 450px) {
+@media (max-width: 520px) {
 
     .bannerabout {
         width: 80%;
+        font-size: 16px;
     }
+
+    #logo-sm {
+        display: block;
+    }
+
+    #logo-lg {
+        display: none;
+    }
+
+    // #logoparent {
+    //     transform: scale(0.4);
+    // }
 
 }
