--- a/libs/client/landingpage/feature/src/lib/landing/landing.component.html
+++ b/libs/client/landingpage/feature/src/lib/landing/landing.component.html
@@ -16,6 +16,52 @@
 
 <div id="systeminfo">
 
+  <div id="supportedactivities" class="lim-33">
+
+    <div>
+
+      <h1 id="suppheading">Supported Activities</h1>
+      <hr id="supphr">
+
+      <div class="supp flex center">
+
+        <div class="w-100 suppparent">
+
+          <div class="flex col place-items-center">
+            <img alt="running icon" src="https://img.icons8.com/ios/50/000000/running.png" class="icon object-scale-down w-20 h-20 mr-4 rounded-full shadow bg-white border-4 border-sky-200 border-x-sky-500" />
+            <p>Running</p>
+          </div>
+          
+          <div class="flex col place-items-center">
+            <img alt="cycling icon" src="https://img.icons8.com/ios-filled/50/000000/bicycle.png" class="icon object-scale-down w-20 h-20 mr-4 rounded-full shadow bg-white border-4 border-sky-200 border-x-sky-500" />
+            <p>Cycling</p>
+          </div>
+
+          <div class="flex col place-items-center">
+            <img alt="swimming icon" src="https://img.icons8.com/ios/50/000000/swimming.png" class="icon object-scale-down w-20 h-20 mr-4 rounded-full shadow bg-white border-4 border-sky-200 border-x-sky-500" />
+            <p>Swimming</p>
+          </div>
+
+          <div class="flex col place-items-center">
+            <img alt="weight-lifing icon" src="https://img.icons8.com/ios/50/000000/dumbbell--v1.png" class="icon object-scale-down w-20 h-20 mr-4 rounded-full shadow bg-white border-4 border-sky-200 border-x-sky-500 flex" />
+            <p>Weight-Lifting</p>
+          </div>
+        </div>
+
+      </div>
+
+    </div>
+
+  </div>
+
+  <div class="lim-33">
+    <img id="mockui" src="./deviceview.png">
+  </div>
+
+  <div class="tbbio">
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta officiis omnis, labore minus temporibus voluptas provident aut et porro illum quo aperiam maxime modi magnam fugit blanditiis, debitis explicabo. Ipsam!</p>
+  </div>
+
 </div>
 
 <!-- <div>
